# keio

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
release-notes/: 0.1.0.md  0.2.0.md
src/keio/: __init__.py  attachments.py  auth.py  cli.py  client_protocol.py  exporter.py  gkeepapi_client.py  importer.py  keep_client.py  markdown_io.py
src/kiko/: __init__.py  attachments.py  auth.py  cli.py  client_protocol.py  conflicts.py  exporter.py  gkeepapi_client.py  importer.py  keep_client.py  markdown_io.py  markdown_model.py  results.py
tests/: conftest.py  test_auth.py  test_cli.py  test_conflicts.py  test_exporter.py  test_gkeepapi_client.py  test_importer.py  test_markdown_io.py
