[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kiko"
dynamic = ["version"]
description = "Google Keep import/export CLI for markdown directories."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
  { name = "Luca Soldaini", email = "luca@soldaini.net" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dependencies = [
  "google-api-python-client>=2.180.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.2",
  "platformdirs>=4.4.0",
  "typer>=0.17.4",
]

[project.optional-dependencies]
gkeepapi = ["gkeepapi>=0.16.0"]
dev = [
  "gkeepapi>=0.16.0",
  "pytest>=8.4.2",
  "ruff>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/soldni/kiko"
Repository = "https://github.com/soldni/kiko"
Issues = "https://github.com/soldni/kiko/issues"

[project.scripts]
kiko = "kiko.cli:main"

[tool.hatch.version]
path = "src/kiko/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/kiko"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
]
